--- a/reservar.html
+++ b/reservar.html
@@ -3,12 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reservar.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    
+    
     <title>RESERVAR</title>
 </head>
 
-    <body>
-        <p>
-            hola vatos
-        </p>
-    </body>
+<body>
+    <header>
+        <div class="bar">
+            <div class="container clearfix">
+                <div class="logo">
+                    <a href="#">
+                        <img src="img/logo.png" alt="logo">
+                    </a>
+                </div>
+                <div class="nav principal-navigation">
+                    <a href="#">Menú</a>
+                    <a href="#">Nosotros</a>
+                    <a href="#">Ubicación</a>
+                    <a href="#">Facturar</a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <section>
+        <div class="noticias-reservar">
+            <h1>El mejor lugar para comer</h1>
+            <div class="slider">
+                <ul>
+                    <li><img src="/Restaurante/img/tres_pisos.jpg"></li>
+                    <li><img src="/Restaurante/img/queso_casa.jpg"></li>
+                    <li><img src="/Restaurante/img/taparterias.jpg"></li>
+
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <footer class="site-footer">
+        <p>Todos los derechos reservados ElPerroCafé 2020. <i class="far fa-copyright"></i></p>
+    </footer>
+</body>
 </html>
