Se agregó formulario en reservas y la imagen de fondo

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <div class="nav principal-navigation">
                 <a href="#">Menú</a>
                 <a href="#">Nosotros</a>
-                <a href="#">Ubicación</a>
-                <a href="#">Facturar</a>
+                <a href="reservar.html">Reservas</a>
+                <a href="#">Facturas</a>
                 <a href="#">Acceder</a>
             </div>
         </div>
@@ -86,7 +86,6 @@
     <footer class="site-footer">
         <p>Todos los derechos reservados ElPerroCafé 2020. <i class="far fa-copyright"></i></p>
     </footer>
-
 
 </body>
 </html>
