Se agregó nosotros.html y se hizo enlace entre index-nosotros, reservas-nosotros

--- a/reservar.html
+++ b/reservar.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="nav principal-navigation">
                     <a href="#">Menú</a>
-                    <a href="#">Nosotros</a>
+                    <a href="nosotros.html">Nosotros</a>
                     <a href="#">Facturas</a>
                     <a href="#">Acceder</a>
                 </div>
