--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="nav principal-navigation">
                 <a href="#">Menú</a>
-                <a href="#">Nosotros</a>
+                <a href="nosotros.html">Nosotros</a>
                 <a href="reservar.html">Reservas</a>
                 <a href="#">Facturas</a>
                 <a href="#">Acceder</a>
