--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="nosotros.html">Nosotros</a>
                 <a href="reservar.html">Reservas</a>
                 <a href="#">Facturas</a>
-                <a href="#">Acceder</a>
+                <a href="#">A Domicilio</a>
             </div>
         </div>
     </div>
