pagina actualizada con su menu principal

--- a/nosotros.html
+++ b/nosotros.html
@@ -23,6 +23,8 @@
                 <div class="nav principal-navigation">
                     <a href="#">Menú</a>
                     <a href="#">Facturas</a>
+                    <a href="reservar.html">Reservar</a>
+                    <a href="#">Ordenar</a>
                 </div>
             </div>
         </div>
