--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <div class="nav principal-navigation">
                 <a href="#">Menú</a>
                 <a href="nosotros.html">Nosotros</a>
-                <a href="reservar.html">Reservas</a>
+                <a href="reservar.html">Reservar</a>
                 <a href="#">Facturas</a>
-                <a href="#">A Domicilio</a>
+                <a href="#">Ordenar</a>
             </div>
         </div>
     </div>
