--- a/nosotros.html
+++ b/nosotros.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="nav principal-navigation">
                     <a href="#">Menú</a>
-                    <a href="#">Facturas</a>
+                    <a href="facturas.html">Facturas</a>
                     <a href="reservar.html">Reservar</a>
                     <a href="#">Ordenar</a>
                 </div>
