--- a/reservar.html
+++ b/reservar.html
@@ -23,7 +23,7 @@
                 <div class="nav principal-navigation">
                     <a href="#">Menú</a>
                     <a href="nosotros.html">Nosotros</a>
-                    <a href="#">Facturas</a>
+                    <a href="facturas.html">Facturas</a>
                     <a href="#">Ordenar</a>
                 </div>
             </div>
