--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="#">Menú</a>
                 <a href="nosotros.html">Nosotros</a>
                 <a href="reservar.html">Reservar</a>
-                <a href="#">Facturas</a>
+                <a href="facturas.html">Facturas</a>
                 <a href="#">Ordenar</a>
             </div>
         </div>
