nombre en cada entrada actualizado en facturas

--- a/facturas.html
+++ b/facturas.html
@@ -57,7 +57,7 @@
                 <input type="text" class="formulario_input" placeholder="RFC" required>
                 
                 <label for="" class="formulario_label">Correo Electronico</label>
-                <input type="email" class="formulario_input" placeholder="Correo Electronico" required>
+                <input type="email" class="formulario_input" placeholder="Email" required>
                 
                 <label for="nombre">Forma de Pago</label>
                 <select name="seleccione1" id="" required>
