Se agregó página de ordenar con toda la sección de hamburguesas

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="nosotros.html">Nosotros</a>
                 <a href="reservar.html">Reservar</a>
                 <a href="facturas.html">Facturas</a>
-                <a href="#">Ordenar</a>
+                <a href="ordenar.html">Ordenar</a>
             </div>
         </div>
     </div>
@@ -65,13 +65,13 @@
             <li>
                 <div class="dish">
                     <img src="img/come_kevin.jpg" alt="Eat Kevin">
-                    <p>Eat Kevin</p>
+                    <p>Eat Kevin!</p>
                 </div>
             </li>
             <li>
                 <div class="dish">
                     <img src="img/tres_pisos.jpg" alt="penthouse">
-                    <p>PenHouse</p>
+                    <p>Penthouse</p>
                 </div>
             </li>
             <li>
