--- a/reservar.html
+++ b/reservar.html
@@ -24,7 +24,7 @@
                     <a href="#">Menú</a>
                     <a href="nosotros.html">Nosotros</a>
                     <a href="facturas.html">Facturas</a>
-                    <a href="#">Ordenar</a>
+                    <a href="ordenar.html">Ordenar</a>
                 </div>
             </div>
         </div>
