--- a/nosotros.html
+++ b/nosotros.html
@@ -24,7 +24,7 @@
                     <a href="#">Menú</a>
                     <a href="facturas.html">Facturas</a>
                     <a href="reservar.html">Reservar</a>
-                    <a href="#">Ordenar</a>
+                    <a href="ordenar.html">Ordenar</a>
                 </div>
             </div>
         </div>
