Se agregaron aperitivos y bebidas en ordenes.html

--- a/ordenar.html
+++ b/ordenar.html
@@ -16,7 +16,9 @@
     <div class="bar">
         <div class="container clearfix">
             <div class="logo">
-                <img src="img/logo.png" alt="logo">
+                <a href="index.html">
+                    <img src="img/logo.png" alt="logo">
+                </a>
             </div>
             <div class="nav principal-navigation">
                 <a href="#">Menú</a>
@@ -28,146 +30,216 @@
         </div>
     </div>
 
-    <section class="container section">
-        <h2>Hamburguesas</h2>
-        <ul class="list-order clearfix">
-            <li>
-                <div class="each-dish">
-                    <img src="img/queso_casa.jpg" alt="house of cheese">
-                    <div class="each-dish-order">
-                        <p>Cheese House</p>
-                        <p>149.00 $</p>
-                        <i class="fas fa-shopping-cart"></i>
+    <div class="order-content">
+        <section class="container section">
+            <h2>Hamburguesas</h2>
+            <ul class="list-order clearfix">
+                <li>
+                    <div class="each-dish">
+                        <img src="img/queso_casa.jpg" alt="house of cheese">
+                        <div class="each-dish-order">
+                            <p>Cheese House</p>
+                            <p>149.00 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li>
-                <div class="each-dish">
-                    <img src="img/crunchy_burguer.jpg" alt="crunchy crunch">
-                    <div class="each-dish-order">
-                        <p>Crunchy Crunch</p>
-                        <p>179.00 $</p>
-                        <i class="fas fa-shopping-cart"></i>
+                </li>
+                <li>
+                    <div class="each-dish">
+                        <img src="img/crunchy_burguer.jpg" alt="crunchy crunch">
+                        <div class="each-dish-order">
+                            <p>Crunchy Crunch</p>
+                            <p>179.00 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li>
-                <div class="each-dish">
-                    <img src="img/taparterias.jpg" alt="dont breath">
-                    <div class="each-dish-order">
-                        <p>Don't Breath</p>
-                        <p>189.00 $</p>
-                        <i class="fas fa-shopping-cart"></i>
+                </li>
+                <li>
+                    <div class="each-dish">
+                        <img src="img/taparterias.jpg" alt="dont breath">
+                        <div class="each-dish-order">
+                            <p>Don't Breath</p>
+                            <p>189.00 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li>
-                <div class="each-dish">
-                    <img src="img/come_kevin.jpg" alt="house of cheese">
-                    <div class="each-dish-order">
-                        <p>Eat Kevin!</p>
-                        <p>139.00 $</p>
-                        <i class="fas fa-shopping-cart"></i>
+                </li>
+                <li>
+                    <div class="each-dish">
+                        <img src="img/come_kevin.jpg" alt="house of cheese">
+                        <div class="each-dish-order">
+                            <p>Eat Kevin!</p>
+                            <p>139.00 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li>
-                <div class="each-dish">
-                    <img src="img/tres_pisos.jpg" alt="penthouse">
-                    <div class="each-dish-order">
-                        <p>Penthouse</p>
-                        <p>139.00 $</p>
-                        <i class="fas fa-shopping-cart"></i>
+                </li>
+                <li>
+                    <div class="each-dish">
+                        <img src="img/tres_pisos.jpg" alt="penthouse">
+                        <div class="each-dish-order">
+                            <p>Penthouse</p>
+                            <p>139.00 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li>
-                <div class="each-dish">
-                    <img src="img/medusa.jpg" alt="medusa">
-                    <div class="each-dish-order">
-                        <p>Medusa</p>
-                        <p>99.00 $</p>
-                        <i class="fas fa-shopping-cart"></i>
+                </li>
+                <li>
+                    <div class="each-dish">
+                        <img src="img/medusa.jpg" alt="medusa">
+                        <div class="each-dish-order">
+                            <p>Medusa</p>
+                            <p>99.00 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li>
-                <div class="each-dish">
-                    <img src="img/triplets.jpg" alt="triplets">
-                    <div class="each-dish-order">
-                        <p>Triplets</p>
-                        <p>119.00 $</p>
-                        <i class="fas fa-shopping-cart"></i>
+                </li>
+                <li>
+                    <div class="each-dish">
+                        <img src="img/triplets.jpg" alt="triplets">
+                        <div class="each-dish-order">
+                            <p>Triplets</p>
+                            <p>119.00 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li>
-                <div class="each-dish">
-                    <img src="img/shrimp-burger.jpg" alt="shrimp">
-                    <div class="each-dish-order">
-                        <p>Mr. Shrimp</p>
-                        <p>189.00 $</p>
-                        <i class="fas fa-shopping-cart"></i>
+                </li>
+                <li>
+                    <div class="each-dish">
+                        <img src="img/shrimp-burger.jpg" alt="shrimp">
+                        <div class="each-dish-order">
+                            <p>Mr. Shrimp</p>
+                            <p>189.00 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li>
-                <div class="each-dish">
-                    <img src="img/diet_burger.jpg" alt="diet burger">
-                    <div class="each-dish-order">
-                        <p>Diet Burger</p>
-                        <p>79.00 $</p>
-                        <i class="fas fa-shopping-cart"></i>
+                </li>
+                <li>
+                    <div class="each-dish">
+                        <img src="img/diet_burger.jpg" alt="diet burger">
+                        <div class="each-dish-order">
+                            <p>Diet Burger</p>
+                            <p>79.00 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
                     </div>
-                </div>
-            </li>
-        </ul>
+                </li>
+            </ul>
+        </section>
 
+        <section class="container section">
+            <h2>Aperitivos</h2>
+            <ul class="list-order clearfix">
+                <li>
+                    <div class="each-dish">
+                        <img src="img/dedos_queso.jpg" alt="chicken fingers">
+                        <div class="each-dish-order">
+                            <p>Cheese Fingers</p>
+                            <p>49.00 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="each-dish">
+                        <img src="img/papas_francesa.jpg" alt="french fries">
+                        <div class="each-dish-order">
+                            <p>French Fries</p>
+                            <p>34.99 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="each-dish">
+                        <img src="img/nuggets.jpg" alt="nuggets">
+                        <div class="each-dish-order">
+                            <p>Chicken Nuggets</p>
+                            <p>69.00 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="each-dish">
+                        <img src="img/papas_gajo.jpg" alt="potato wedges">
+                        <div class="each-dish-order">
+                            <p>Potato Wedges</p>
+                            <p>49.00 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="each-dish">
+                        <img src="img/chicken_fingers.jpg" alt="chicken fingers">
+                        <div class="each-dish-order">
+                            <p>Chicken Fingers</p>
+                            <p>109.00 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </section>
 
-    </section>
-
-    <section class="best-dishes container section">
-        <h2>Hamburguesas</h2>
-        <ul class="list-dishes clearfix">
-            <li>
-                <div class="dish">
-                    <img src="img/queso_casa.jpg" alt="house of cheese">
-                    <p>Cheese House</p>
-                </div>
-            </li>
-            <li>
-                <div class="dish">
-                    <img src="img/crunchy_burguer.jpg" alt="crunchy crunch">
-                    <p>Crunchy Crunch</p>
-                </div>
-            </li>
-            <li>
-                <div class="dish">
-                    <img src="img/taparterias.jpg" alt="stop breathing">
-                    <p>Don't Breath</p>
-                </div>
-            </li>
-            <li>
-                <div class="dish">
-                    <img src="img/come_kevin.jpg" alt="Eat Kevin">
-                    <p>Eat Kevin</p>
-                </div>
-            </li>
-            <li>
-                <div class="dish">
-                    <img src="img/tres_pisos.jpg" alt="penthouse">
-                    <p>PenHouse</p>
-                </div>
-            </li>
-            <li>
-                <div class="dish">
-                    <img src="img/medusa.jpg" alt="medusa">
-                    <p>Medusa</p>
-                </div>
-            </li>
-        </ul>
-    </section>
-
+        <section class="container section">
+            <h2>Bebidas</h2>
+            <ul class="list-order clearfix">
+                <li>
+                    <div class="each-dish">
+                        <img src="img/fresita.jpg" alt="little pink">
+                        <div class="each-dish-order">
+                            <p>Little Pink</p>
+                            <p>49.00 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="each-dish">
+                        <img src="img/chocolate.jpg" alt="chocolate push">
+                        <div class="each-dish-order">
+                            <p>Chocolate Push</p>
+                            <p>49.00 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="each-dish">
+                        <img src="img/malteada_grande.jpg" alt="allint">
+                        <div class="each-dish-order">
+                            <p>AllInt</p>
+                            <p>59.00 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="each-dish">
+                        <img src="img/oreo.jpg" alt="oreo party">
+                        <div class="each-dish-order">
+                            <p>Oreo Party</p>
+                            <p>49.00 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="each-dish">
+                        <img src="img/varias_bebidas.jpg" alt="onteist">
+                        <div class="each-dish-order">
+                            <p>Onteist</p>
+                            <p>39.00 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </section>
+    </div>
+    
     <footer class="site-footer">
         <p>Todos los derechos reservados ElPerroCafé 2020. <i class="far fa-copyright"></i></p>
     </footer>
