--- a/ordenar.html
+++ b/ordenar.html
@@ -180,6 +180,16 @@
                         </div>
                     </div>
                 </li>
+                <li>
+                    <div class="each-dish">
+                        <img src="img/aros_cebolla.jpg" alt="onion rings">
+                        <div class="each-dish-order">
+                            <p>Onion Rings</p>
+                            <p>49.00 $</p>
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
+                </li>
             </ul>
         </section>
 
