contador de platillos (solo 1) prueba

--- a/facturas.html
+++ b/facturas.html
@@ -75,8 +75,10 @@
                 </select>
                 
                 <input type="submit" value="Enviar" class="button">
+                
             </form>
         </main>
+        <iframe id="send" style="display: none;"></iframe>
     </section>
 </body>
 </html>
