--- a/ordenar.html
+++ b/ordenar.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald|PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
+
+    
 </head>
 
 <body>
@@ -29,7 +31,7 @@
             </div>
         </div>
     </div>
-
+    
     <div class="order-content">
         <section class="container section">
             <h2>Hamburguesas</h2>
@@ -40,7 +42,12 @@
                         <div class="each-dish-order">
                             <p>Cheese House</p>
                             <p>149.00 $</p>
-                            <i class="fas fa-shopping-cart"></i>
+                            <div class="boton-mas-menos">    
+                                <button id="add" >+</button>
+                                <input type="number" value="0" disabled>
+                                <button id="minus">-</button>
+                                <script src="javascript/style.js"></script>
+                            </div>
                         </div>
                     </div>
                 </li>
@@ -255,3 +262,4 @@
     </footer>
 
 </body>
+</html>
