--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <img src="img/logo.png" alt="logo">
             </div>
             <div class="nav principal-navigation">
-                <a href="#">Menú</a>
+                <a href="menu.html">Menú</a>
                 <a href="nosotros.html">Nosotros</a>
                 <a href="reservar.html">Reservar</a>
                 <a href="facturas.html">Facturas</a>
