Se agrega footer en facturas.html

--- a/facturas.html
+++ b/facturas.html
@@ -80,5 +80,9 @@
         </main>
         <iframe id="send" style="display: none;"></iframe>
     </section>
+
+    <footer class="site-footer">
+        <p>Todos los derechos reservados ElPerroCafé 2020. <i class="far fa-copyright"></i></p>
+    </footer>
 </body>
 </html>
