mini ventana de ordenar lista

--- a/ordenar.html
+++ b/ordenar.html
@@ -34,7 +34,20 @@
     
     <div class="order-content">
         <section class="container section">
-            <h2>Hamburguesas</h2>
+            <div class="titulo">
+                <h2>HAMBURGUESA</h2>
+                <a href="#modal" id="show-modal"><p class="fas fa-shopping-cart"></p></a>
+                <aside id="modal" class="modal">
+                    <div class="contenido">
+                        <header>
+                            <a href="#" class="cierre">X</a>
+                            <h3 class="fas fa-shopping-cart"></h3>
+                        </header>
+                        <article><p>hola</p></article>
+                    </div>
+                    <a href="#" class="btn-closemoa"></a>
+                </aside>
+            </div>
             <ul class="list-order clearfix">
                 <li>
                     <div class="each-dish">
